src/test/resources/de/cd4analysis/cocos/invalid/U0447.cd
package de.cd4analysis.cocos;

classdiagram U0447 {
  class C1 {
    String a = 1;
    int b = "str";
    int c = 1;
  }  
}